Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Gabriela);
+@import url(https://fonts.googleapis.com/css2?family=Permanent+Marker);
+
 
 html, body {
   height: 100%;
