--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 h1, h2 {
-  font-family: 'Permanent Marker', serif;
+  font-family: 'Permanent Marker', cursive;
   color: #3CB5D5;
 }
 
