Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ h2 {
 h3 {
   font-family: 'Gabriela', serif;
   font-size: 1.5em;
-  font-color: ;
+  font-color: #D53CC2;
   margin-top: .5em;
 }
 
