Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Permanent+Marker);
+@import url(https://fonts.googleapis.com/css2?family=Fascinate&family=Permanent+Marker);
 
 
 html, body {
